--- a/res/values-zh-rTW/strings.xml
+++ b/res/values-zh-rTW/strings.xml
@@ -230,6 +230,7 @@
     <string name="settings_widgets_widget4x2_v5">Widget 4x2 (v5)</string>
     <string name="settings_widgets_widget4x2_wind_font_summary">預設值 14sp</string>
     <string name="settings_widgets_widget4x2_wind_font_title">風速</string>
+    <string name="settings_widgets_widget4x3_hourly_view">顯示每小時的天氣</string>
     <string name="share">分享</string>
     <string name="share_content">\#WeatherBZ#</string>
     <string name="share_weather_content">"\#WeatherBZ# 今天 %1$s 的天氣是 %2$s, %3$s, %4$s. 更新 %5$s."</string>
