french translation, only moon_* strings to translate.

--- a/res/values-fr/strings.xml
+++ b/res/values-fr/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-	<string name="about_author">"Auteur:"</string>
+	<string name="about_author">"Auteur :"</string>
 	<string name="about_blizzard">Tempête de neige</string>
 	<string name="about_cloudy">Nuageux</string>
 	<string name="about_dust">Tempête de poussière</string>
@@ -9,45 +9,53 @@
 	<string name="about_for_translators">"Traductions:"</string>
 	<string name="about_hailstone">Grêle</string>
 	<string name="about_heavy_snow">Grosse chute de neige</string>
+	<string name="about_heavy_rain">Pluie battante</string>
 	<string name="about_light_rain">Pluie fine</string>
 	<string name="about_light_snow">Neige légère</string>
+	<string name="about_moderate_rain">Pluie modérée</string>
+	<string name="about_moderate_snow">Neige modérée</string>
 	<string name="about_overcast">Nuages épars</string>
 	<string name="about_rainstorm">Pluie torrentielle</string>
 	<string name="about_rain_drizzle">Averse</string>
 	<string name="about_sleet">Grésil</string>
-	<string name="about_social">"Liens:"</string>
+	<string name="about_social">"Liens sociaux :"</string>
 	<string name="about_sunny">Ciel dégagé</string>
 	<string name="about_t_storms">Orage</string>
-	<string name="about_version">"Version:"</string>
+	<string name="about_version">"Version :"</string>
+	<string name="action_bar_selected_format">Sélectionné : %d</string>
 	<string name="app_name">Météo</string>
+	<string name="applying_theme">Application du thème\u2026</string>
 	<string name="btn_add_location">Ajouter</string>
+	<string name="btn_apply_theme">Appliquer</string>
 	<string name="btn_delete_location">Supprimer</string>
 	<string name="cancel">Annuler</string>
 	<string name="changelog">Dernières mises à jour</string>
+	<string name="clear_miui_data">Vider le cache météo</string>
 	<string name="clear_miui_data_dialog_ask">"Les données de l'application météo native de MIUI vont être effacées."</string>
 	<string name="clear_miui_data_dialog_text">"Les données de l'application météo native de MIUI ont été effacées avec succès !"</string>
 	<string name="clear_miui_data_dialog">Nettoyage du cache météo</string>
 	<string name="clear_miui_data_summary">"Effacer les données de l'application météo native de MIUI"</string>
-	<string name="clear_miui_data">Vider le cache météo</string>
 	<string name="close">Fermer</string>
+	<string name="date_format_title">Format de la date</string>	
+	<string name="date_format_mdy">MM/dd/yyyy</string>
+    <string name="date_format_dmy">dd/MM/yyyy</string>
 	<string name="dialog_color_picker">Choix de la couleur</string>
 	<string name="donate">Faire un don</string>
 	<string name="donations_button_close">Fermer</string>
-	<string name="donations_description">"Vous trouvez cette application utile ?
-Vous pouvez supporter son développement sur Flattr ou en envoyant des dons via l'Android Market."</string>
-	<string name="donations_flattr_description">Flattr prend 10% de frais mensuels !</string>
+	<string name="donations_description">Vous trouvez cette application utile ?\nVous pouvez supporter son développement sur Flattr ou en envoyant des dons via l\'Android Market.</string>
 	<string name="donations_flattr">Flattr</string>
+	<string name="donations_flattr_description">Flattr prend 10% de frais mensuels !</string>
+	<string name="donations_google_android_market">Google Play Store</string>
 	<string name="donations_google_android_market_description">Google prend 30% sur chaque don !</string>
 	<string name="donations_google_android_market_donate_button">Faire un don</string>
 	<string name="donations_google_android_market_not_supported_title">Donations In-App non-supportées</string>
 	<string name="donations_google_android_market_not_supported">"Donations In-App non-supportée. L'application Google Play Store est-elle correctement installée ?"</string>
 	<string name="donations_google_android_market_text">Combien ?</string>
-	<string name="donations_google_android_market">Google Play Store</string>
+	<string name="donations_paypal">PayPal</string>
 	<string name="donations_paypal_description">Vous pouvez faire un don du montant désiré en cliquant sur le bouton ci-dessous.</string>
 	<string name="donations_paypal_item_name">InApp Donation</string>
-	<string name="donations_paypal">PayPal</string>
-	<string name="donations_thanks_dialog_title">Merci !</string>
 	<string name="donations_thanks_dialog">Merci beaucoup pour votre don !</string>
+	<string name="donations_thanks_dialog_title">Merci !</string>
 	<string name="end_time_title">Fin</string>
 	<string name="fetching_location">Géolocalisation…</string>
 	<string name="forecast_chance_of_rain">Risque de pluie</string>
@@ -99,47 +107,58 @@ Vous pouvez supporter son développement sur Flattr ou en envoyant des dons via 
 	<string name="location_list">Villes</string>
 	<string name="location_search">"Recherche d'une ville"</string>
 	<string name="main_screen_text_color_summary">"Couleur du texte sur l'écran principal"</string>
+	<string name="menu_delete_theme">Supprimer</string>
 	<string name="menu_hourly">Heure par heure</string>
+	<string name="menu_import">Importer depuis la carte SD</string>
 	<string name="menu_locations">Villes</string>
+	<string name="menu_moon_phases">Phases lunaires </string>
 	<string name="menu_settings">Paramètres</string>
+	<string name="menu_themes">Thèmes</string>
 	<string name="menu_trend">Tendance</string>
 	<string name="menu_update">Mise à jour</string>
 	<string name="network_error">Impossible de se connecter au serveur</string>
+	<string name="network_in_quiet_hours">Vous êtes en heures de repos. Mises à jour annulées.</string>
+    <string name="network_in_roaming">Vous avez des paramètres pour désactiver les mises à jour en itinérance.</string>
+    <string name="network_wifi_only">Mises à jour uniquement via Wi-Fi.</string>
 	<string name="new_version">Nouvelle version</string>
 	<string name="no_provider">La géolocalisation a échoué, veuillez entrer manuellement votre position.</string>
 	<string name="not_now">Pas maintenant</string>
 	<string name="ok">OK</string>
 	<string name="press_color_to_apply">"Appuyer sur la couleur pour l'appliquer"</string>
+	<string name="pressure_units">Unité de pression</string>
 	<string name="pressure_units_mb">" mb"</string>
 	<string name="pressure_units_mmhg">" mm Hg"</string>
-	<string name="pressure_units">Unité de pression</string>
+	<string name="quiet_hours_enabled">Désactiver les mises à jour</string>
 	<string name="quiet_hours_enabled_off">Mises à jour activées à toute heure de la journée</string>
 	<string name="quiet_hours_enabled_on">Mises à jour désactivées sur la plage horaire définie ci-dessous</string>
-	<string name="quiet_hours_enabled">Désactiver les mises à jour</string>
 	<string name="quiet_hours_title">Plages horaires des mises à jour</string>
 	<string name="settings_about_title">À propos</string>
-	<string name="settings_category_animation_sum"></string>
 	<string name="settings_category_animation">Animations</string>
+	<string name="settings_category_animation_sum"></string>
 	<string name="settings_category_app_update">Application</string>
-	<string name="settings_category_appearance_sum"></string>
 	<string name="settings_category_appearance">Apparence</string>
+	<string name="settings_category_appearance_sum"></string>
 	<string name="settings_category_forecast_update">Prévisions météorologiques</string>
-	<string name="settings_category_miui_sum"></string>
 	<string name="settings_category_miui">ROM MIUI</string>
+	<string name="settings_category_miui_sum"></string>
 	<string name="settings_category_network">Accès internet</string>
-	<string name="settings_category_notification_sum"></string>
 	<string name="settings_category_notification">Notifications</string>
-	<string name="settings_category_update_sum"></string>
+	<string name="settings_category_notification_sum"></string>
 	<string name="settings_category_update">Mises à jour</string>
-	<string name="settings_category_widgets_sum"></string>
+	<string name="settings_category_update_sum"></string>
 	<string name="settings_category_widgets">Widgets</string>
+	<string name="settings_category_widgets_sum"></string>
+	<string name="settings_citydb_provider">Fournisseur ville</string>
 	<string name="settings_check_updates_summary">"Vérifier automatiquement les mises à jour de l'application au démarrage de celle-ci"</string>
 	<string name="settings_check_updates_title">Vérifier les mises à jour</string>
 	<string name="settings_click_actions">Actions sur clics</string>
+	<string name="settings_colorize_weather_icons_title">Colorier les icônes</string>
+    <string name="settings_colorize_weather_icons_summary">Utiliser la couleur du texte pour les icônes(pour les icônes météo blancs par ex.)</string>
 	<string name="settings_miui_support_summary">"Activer la prise en charge de l'icône dynamique de l'application (à condition que l'icône ait été installée par ailleurs)"</string>
 	<string name="settings_miui_support_title">"Activer l'icône dynamique"</string>
-	<string name="settings_miui_v5_summary">Désactiver si le système tourne sous la ROM MIUI v5</string>
+	<string name="settings_miui_v5_summary">Activer si le système tourne sous la ROM MIUI v5</string>
 	<string name="settings_miui_v5_title">ROM MIUI v5</string>
+	<string name="settings_moon_phases_title">Phases lunaires</string>
 	<string name="settings_notification_color_title">"Couleur dans la barre d'état"</string>
 	<string name="settings_notification_summary">Afficher la météo actuelle dans les notifications</string>
 	<string name="settings_notification_text_color_summary">"Couleur du texte et de l'icône"</string>
@@ -153,16 +172,26 @@ Vous pouvez supporter son développement sur Flattr ou en envoyant des dons via 
 	<string name="settings_update_interval_title">Fréquence des mises à jour</string>
 	<string name="settings_update_roaming_summary">Mettre à jour les prévisions météorologiques à tout moment (des frais supplémentaires liés à la consommation de données peuvent être facturés)</string>
 	<string name="settings_update_roaming_title">Mettre à jour via les données</string>
+	<string name="settings_update_wake_title">"Réveiller l'appareil"</string>
 	<string name="settings_update_wifi_only_summary">Mettre à jour automatiquement les prévisions météorologiques seulement si une connexion Wi-Fi est active</string>
 	<string name="settings_update_wifi_only_title">Mettre à jour via Wi-Fi uniquement</string>
+	<string name="settings_weather_provider">Fournisseur météo</string>
 	<string name="settings_widgets_click_clock_summary">"Choisir l'application à lancer en cliquant sur l'heure affichée dans le widget"</string>
 	<string name="settings_widgets_click_clock_title">"Clic sur l'horloge"</string>
+    <string name="settings_widgets_click_date_summary">"Choisir l'application à lancer en cliquant sur la date affichée dans le widget"</string>
+    <string name="settings_widgets_click_date_title">Clic sur la date</string>
 	<string name="settings_widgets_click_weather_summary">"Choisir l'application à lancer en cliquant sur la zone météo du widget"</string>
 	<string name="settings_widgets_click_weather_title">Clic sur la météo</string>
+    <string name="settings_widgets_clock_remove_leading_zero_title">Retirer un zéro</string>
+    <string name="settings_widgets_clock_remove_leading_zero_summary">Supprime le zéro des heures</string>
+    <string name="settings_widgets_local_time_title">Heure locale</string>
+    <string name="settings_widgets_local_time_summary">"Utiliser l'heure locale de la ville dans les widgets"</string>	
+	<string name="settings_widgets_widget4x1">Widget 4x1</string>
 	<string name="settings_widgets_widget4x1_data_title">Prévisions météorologiques</string>
 	<string name="settings_widgets_widget4x1_transparent_sum">Arrière plan par défaut si option désactivée</string>
 	<string name="settings_widgets_widget4x1_transparent_title">Fond transparent</string>
-	<string name="settings_widgets_widget4x1">Widget 4x1</string>
+	<string name="settings_widgets_widget4x1_v5">Widget 4x1 (v5)</string>
+	<string name="settings_widgets_widget4x2">Widget 4x2</string>
 	<string name="settings_widgets_widget4x2_city_font_summary">Valeur par défaut 22sp</string>
 	<string name="settings_widgets_widget4x2_city_font_title">Ville</string>
 	<string name="settings_widgets_widget4x2_clock_font_summary">Valeur par défaut 50sp</string>
@@ -177,21 +206,38 @@ Vous pouvez supporter son développement sur Flattr ou en envoyant des dons via 
 	<string name="settings_widgets_widget4x2_feel_font_title">Ressenti</string>
 	<string name="settings_widgets_widget4x2_temp_font_summary">Valeur par défaut 40sp</string>
 	<string name="settings_widgets_widget4x2_temp_font_title">Température</string>
+	<string name="settings_widgets_widget4x2_v5">Widget 4x2 (v5)</string>
 	<string name="settings_widgets_widget4x2_wind_font_summary">Valeur par défaut 14sp</string>
 	<string name="settings_widgets_widget4x2_wind_font_title">Vent</string>
-	<string name="settings_widgets_widget4x2">Widget 4x2</string>
+	<string name="settings_widgets_widget4x3">Widget 4x3</string>
+    <string name="settings_widgets_widget4x3_hourly_view">Météo heure par heure</string>
+	<string name="share">Partager</string>
+    <string name="share_content">\#WeatherBZ#</string>
+    <string name="share_weather_content">"\#WeatherBZ# Aujourd'hui %1$s's la météo est %2$s, %3$s, %4$s. Mis à jour %5$s."</string>
+    <string name="share_weather_title">Partager les données météo</string>
+    <string name="save_screen_shot_failed">"Impossible de sauver le capture d'écran"</string>
 	<string name="start_time_title">Début</string>
 	<string name="temperature_units_c">Celsius</string>
 	<string name="temperature_units_f">Fahrenheit</string>
 	<string name="temperature_units">Unité de température</string>
 	<string name="text_color_title">Couleur</string>
+	<string name="theme_author">"Auteur : "</string>
+    <string name="theme_date">"Date : "</string>
+    <string name="theme_import_dialog_title">Sélectionnez un thème à importer</string>
+    <string name="theme_import_no_filemanager">Veuillez installer un gestionnaire de fichiers.</string>
+    <string name="theme_import_not_theme">Ce n'est pas un fichier de thème!</string>
+    <string name="theme_version">"Version : "</string>
+    <string name="themes_temperature_icons">Icônes temperature</string>
+    <string name="themes_weather_animation">Animations météo</string>
+    <string name="themes_weather_icons">Icônes météo</string>
 	<string name="updating">Mise à jour…</string>
 	<string name="upgrade">Mise à jour</string>
+	<string name="visibility_units">Unité de visibilité</string>
 	<string name="visibility_units_km">" km"</string>
 	<string name="visibility_units_m">" m"</string>
 	<string name="visibility_units_mi">" miles"</string>
-	<string name="visibility_units">Unité de visibilité</string>
 	<string name="weather_feel">"Ressenti : "</string>
+	<string name="weather_forecast_empty">--</string>
 	<string name="weather_humidity">"Humidité : "</string>
 	<string name="weather_no_city">Aucune ville</string>
 	<string name="weather_no_data">Aucune donnée météo</string>
@@ -201,10 +247,12 @@ Vous pouvez supporter son développement sur Flattr ou en envoyant des dons via 
 	<string name="weather_sunset">"Coucher : "</string>
 	<string name="weather_visibility">"Visibilité : "</string>
 	<string name="weather_wind">"Vent : "</string>
-	<string name="widget_name_4x2_v5">Météo 4x2</string>
+	<string name="widget_name_4x3">Météo 4x3</string>
 	<string name="widget_name_4x2">Météo 4x2</string>
-	<string name="widget_name_4x1_ext">Météo 4x1</string>
+	<string name="widget_name_4x2_v5">Météo 4x2(v5)</string>
 	<string name="widget_name_4x1">Météo 4x1</string>
+	<string name="widget_name_4x1_ext">Météo 4x1(ext)</string>
+	<string name="widget_name_4x1_v5">Météo 4x1(v5)</string>
 	<string name="widget_text_color_summary">Couleur du texte</string>
 	<string name="wind_e">E</string>
 	<string name="wind_ene">E-NE</string>
@@ -216,10 +264,10 @@ Vous pouvez supporter son développement sur Flattr ou en envoyant des dons via 
 	<string name="wind_nw">NO</string>
 	<string name="wind_s">S</string>
 	<string name="wind_se">SE</string>
+	<string name="wind_speed_units">Unité de vitesse du vent</string>
 	<string name="wind_speed_units_kmph">" km/h"</string>
 	<string name="wind_speed_units_mph">" mph"</string>
 	<string name="wind_speed_units_mps">" m/s"</string>
-	<string name="wind_speed_units">Unité de vitesse du vent</string>
 	<string name="wind_sse">S-SE</string>
 	<string name="wind_ssw">S-SO</string>
 	<string name="wind_sw">SO</string>
@@ -227,4 +275,16 @@ Vous pouvez supporter son développement sur Flattr ou en envoyant des dons via 
 	<string name="wind_w">O</string>
 	<string name="wind_wnw">O-NO</string>
 	<string name="wind_wsw">O-SO</string>
+	<string name="zodiac_aries">Bélier</string>
+    <string name="zodiac_taurus">Taureau</string>
+    <string name="zodiac_gemini">Gémeaux</string>
+    <string name="zodiac_cancer">Cancer</string>
+    <string name="zodiac_leo">Lion</string>
+    <string name="zodiac_virgo">Vierge</string>
+    <string name="zodiac_libra">Balance</string>
+    <string name="zodiac_scorpio">Scorpion</string>
+    <string name="zodiac_sagittarius">Sagittaire</string>
+    <string name="zodiac_capricorn">Capricorne</string>
+    <string name="zodiac_aquarius">Verseau</string>
+    <string name="zodiac_pisces">Poissons</string>
 </resources>
