--- a/res/values-hu/strings.xml
+++ b/res/values-hu/strings.xml
@@ -5,22 +5,26 @@
     <string name="about_cloudy">Felhős</string>
     <string name="about_dust">Szmog</string>
     <string name="about_fog">Ködös</string>
-    <string name="about_for_translators_text">A fordításhoz minden forrásanyag megtalálható a készítő github oldalán</string>
     <string name="about_for_translators">A fordítóknak:</string>
+    <string name="about_for_translators_text">A fordításhoz minden forrásanyag megtalálható a készítő github oldalán</string>
     <string name="about_hailstone">Jégeső</string>
     <string name="about_haze">Köd</string>
     <string name="about_heavy_rain">Zápor</string>
     <string name="about_heavy_snow">Havazás</string>    
     <string name="about_light_rain">Könnyű eső</string>
     <string name="about_light_snow">Hószállingázás</string>
+    <string name="about_moderate_rain">Gyenge eső</string>
+    <string name="about_moderate_snow">Gyenge havazás</string>
     <string name="about_overcast">Borult</string>
-    <string name="about_rainstorm">Felhőszakadás</string>
     <string name="about_rain_drizzle">Záporok</string>
+    <string name="about_rainstorm">Felhőszakadás</string>
     <string name="about_sleet">Ónos eső</string>
+    <string name="about_snow_showers">Hózáporok</string>
     <string name="about_social">Kapcsolatfelvétel:</string>
     <string name="about_sunny">Napos</string>
     <string name="about_t_storms">Zivatarok</string>
     <string name="about_version">Verzió:</string>
+    <string name="action_bar_selected_format">Kiválasztva: %d</string>
     <string name="app_name">Időjárás</string>
     <string name="applying_theme">Táma alkalmazása\u2026</string>
     <string name="btn_add_location">Új helyszín</string>
@@ -28,30 +32,30 @@
     <string name="btn_delete_location">Helyszín törlése</string>
     <string name="cancel">Mégsem</string>
     <string name="changelog">Változások</string>
+    <string name="clear_miui_data">MIUI időjárásadatok törlése</string>
+    <string name="clear_miui_data_dialog">MIUI Időjárás törlése</string>
     <string name="clear_miui_data_dialog_ask">Törli a MIUI Időjárás Szolgáltató adatbázis adatát?</string>
     <string name="clear_miui_data_dialog_text">MIUI időjárás szolgáltató adatbázisa törölve!</string>
-    <string name="clear_miui_data_dialog">MIUI Időjárás törlése</string>
     <string name="clear_miui_data_summary">MIUI időjárás szolgáltató adatbázisának törlése</string>
-    <string name="clear_miui_data">MIUI időjárásadatok törlése</string>
     <string name="close">Bezárás</string>
     <string name="date_format_title">Dátum formátum</string>
     <string name="dialog_color_picker">Szín választó</string>
     <string name="donate">Adományozás</string>
     <string name="donations_button_close">Bezár</string> 
     <string name="donations_description">Hasznosnak találod ezt az alkalmazást?\nTámogathatod a fejlsztést flattring-el vagy küldhetsz támogatást a Google Android Market-et használva!</string> 
-    <string name="donations_flattr_description">A Flattr 10 %-ot levesz havi díjként!</string> 
     <string name="donations_flattr">Flattr</string> 
+    <string name="donations_flattr_description">A Flattr 10 %-ot levesz havi díjként!</string> 
+    <string name="donations_google_android_market">Google Android Market</string> 
     <string name="donations_google_android_market_description">A Google része 30 % minden adományból!</string> 
     <string name="donations_google_android_market_donate_button">Adományozok!</string> 
-    <string name="donations_google_android_market_not_supported_title">In-App Donations nem támogatott</string> 
     <string name="donations_google_android_market_not_supported">Az alkalmazáson belüli adományozás nem támogatott. A Google Android Market megfelelően van telepítve?</string> 
+    <string name="donations_google_android_market_not_supported_title">In-App Donations nem támogatott</string> 
     <string name="donations_google_android_market_text">Mennyi?</string> 
-    <string name="donations_google_android_market">Google Android Market</string> 
+    <string name="donations_paypal">PayPal</string> 
     <string name="donations_paypal_description">Az adományozott összeget megválaszthatja a gombra való kattintás után.</string> 
     <string name="donations_paypal_item_name">InApp Adományozás</string> 
-    <string name="donations_paypal">PayPal</string> 
-    <string name="donations_thanks_dialog_title">Köszönöm!</string> 
     <string name="donations_thanks_dialog">Köszönjük a támogatást!\nNagyra értékeljük!</string>
+    <string name="donations_thanks_dialog_title">Köszönöm!</string> 
     <string name="end_time_title">Vége</string>
     <string name="fetching_location">Helymeghatározás\u2026</string>
     <string name="forecast_chance_of_rain">Eső várható</string>
@@ -62,16 +66,18 @@
     <string name="forecast_chance_of_tstorm">Vihar</string>
     <string name="forecast_clear">Tiszta</string>
     <string name="forecast_cloudy">Felhős</string>
+    <string name="forecast_cold">Hideg</string>
     <string name="forecast_drizzle">Szitáló eső</string>
     <string name="forecast_dust">Poros</string>
     <string name="forecast_fair">Szép idő</string>
     <string name="forecast_flurries">Széllökések</string>
     <string name="forecast_fog">Köd</string>
     <string name="forecast_freezing_drizzle">Fagyos, szitáló eső</string>
-	<string name="forecast_freezing_rain">Fagyos eső</string>
+    <string name="forecast_freezing_rain">Fagyos eső</string>
     <string name="forecast_hail">Jégeső</string>
     <string name="forecast_haze">Pára</string>
     <string name="forecast_heavy_rain">Szakadó eső</string>
+    <string name="forecast_hot">Forróság</string>
     <string name="forecast_icy">Jeges</string>
     <string name="forecast_light_rain">Enyhe eső</string>
     <string name="forecast_light_snow">Enyhe havazás</string>
@@ -84,7 +90,7 @@
     <string name="forecast_rain">Eső</string>
     <string name="forecast_rain_and_snow">Eső és hó</string>
     <string name="forecast_rain_showers">Zivatar</string>
-	<string name="forecast_sand">Homok</string>
+    <string name="forecast_sand">Homok</string>
     <string name="forecast_scattered_showers">Szórványos eső</string>
     <string name="forecast_scattered_thunderstorms">Szórványos viharok</string>
     <string name="forecast_showers">Zivatarok</string>
@@ -92,9 +98,11 @@
     <string name="forecast_smoke">Füst</string>
     <string name="forecast_snow">Havazás</string>
     <string name="forecast_snow_showers">Hózápor</string>
-	<string name="forecast_snow_storm">Hóvihar</string>
+    <string name="forecast_snow_storm">Hóvihar</string>
     <string name="forecast_sunny">Napos</string>
     <string name="forecast_thunderstorm">Vihar égzengéssel</string>
+    <string name="forecast_thunderstorms">Zivatarok</string>
+    <string name="forecast_tornado">Tornádó</string>
     <string name="forecast_windy">Vihar</string>
     <string name="just_now">Most</string>
     <string name="loading">Betöltés\u2026</string> 
@@ -103,6 +111,7 @@
     <string name="location_list">Helyszínek</string>
     <string name="location_search">Helyszín keresés</string>
     <string name="main_screen_text_color_summary">A főképernyő adatainak szöveg színe</string>
+    <string name="menu">Menü</string>
     <string name="menu_delete_theme">Téma törlése</string>
     <string name="menu_hourly">Óránként</string>
     <string name="menu_import">Téma importálása</string>
@@ -112,7 +121,6 @@
     <string name="menu_themes">Témák</string>
     <string name="menu_trend">Előrejelzés</string>
     <string name="menu_update">Frissítés</string>
-    <string name="menu">Menü</string>
     <string name="moon_age">%s napja</string>
     <string name="moon_current_view">%s nézet</string>
     <string name="moon_firstquarter">Első negyed</string>
@@ -125,40 +133,45 @@
     <string name="moon_waninggibbous">Fogyó hold</string>
     <string name="moon_waxingcrescent">Növekvő hold</string>
     <string name="moon_waxinggibbous">Növekvő hold</string>
-    <string name="network_error">Csatlakozás sikertelen</string>
+    <string name="network_error">Csatlakozás sikertelen.\nEllenőrizze a hálózati beállításokat.</string>
+    <string name="network_in_quiet_hours">Akkukímélési mód bekapcsolva. Frissítések leállítva.</string>
+    <string name="network_in_roaming">Adatbarangoláskor frissítések tiltásának beállítása.</string>
+    <string name="network_wifi_only">Frissítések beállítása csak Wi-Fi-ről.</string>
     <string name="new_version">Új verzió</string> 
     <string name="no_provider">Helymeghatározás sikertelen - a helyszínt válassza ki manuálisan</string>
     <string name="no_weather_provider">Nincs elérhető MIUI időjárás szolgáltató</string>
     <string name="not_now">Most nem</string> 
     <string name="press_color_to_apply">Alkalmazáshoz nyomja meg a színt</string>
+    <string name="pressure_units">Légnyomás mértékegysége</string> 
     <string name="pressure_units_mb">" mb"</string>
     <string name="pressure_units_mmhg">" mm Hg"</string>
-    <string name="pressure_units">Légnyomás mértékegysége</string> 
+    <string name="quiet_hours_enabled">Akkukímélés engedélyezése</string>
     <string name="quiet_hours_enabled_off">Ne frissítsen a megadott időszak alatt</string>
     <string name="quiet_hours_enabled_on">Akkukímélési mód engedélyezve</string>
-    <string name="quiet_hours_enabled">Akkukímélés engedélyezése</string>
     <string name="quiet_hours_title">Akkukímélési mód</string>
     <string name="save_screen_shot_failed">Képernyőkép mentése nem sikerült</string>
     <string name="settings_about_title">Névjegy</string>
-    <string name="settings_category_animation_sum">Időjárás animáció beállítások és letöltés</string>
     <string name="settings_category_animation">Animáció beállítások</string>
+    <string name="settings_category_animation_sum">Időjárás animáció beállítások és letöltés</string>
     <string name="settings_category_app_update">Alkalmazás frissítés</string>
-    <string name="settings_category_appearance_sum">Megjelenítési beállítás (adat kijelzés/elrejtés stb.)</string>
     <string name="settings_category_appearance">Megjelenítés</string>
+    <string name="settings_category_appearance_sum">Megjelenítési beállítás (adat kijelzés/elrejtés stb.)</string>
     <string name="settings_category_forecast_update">Időjárás frissítés</string>
-    <string name="settings_category_miui_sum">MIUI támogatás (be-kikapcsolás,adatok törlése stb.)</string>
     <string name="settings_category_miui">MIUI ROM-ok</string>
+    <string name="settings_category_miui_sum">MIUI támogatás (be-kikapcsolás,adatok törlése stb.)</string>
     <string name="settings_category_network">Hálózat beállítás</string>
-    <string name="settings_category_notification_sum">Időjárás értesítés beállítás</string>
     <string name="settings_category_notification">Értesítés beállítás</string>
-    <string name="settings_category_update_sum">Automatikus frissítés beállításai</string>
+    <string name="settings_category_notification_sum">Időjárás értesítés beállítás</string>
     <string name="settings_category_update">Frissítési beállítások</string>
-    <string name="settings_category_widgets_sum">Widgets megjelenés és érintési műveletek</string>
+    <string name="settings_category_update_sum">Automatikus frissítés beállításai</string>
     <string name="settings_category_widgets">Widget beállítások</string>
+    <string name="settings_category_widgets_sum">Widgets megjelenés és érintési műveletek</string>
     <string name="settings_check_updates_summary">Frissítések ellenőrzése indításkor</string>
     <string name="settings_check_updates_title">Frissítések ellenőrzése</string>
     <string name="settings_citydb_provider">Város adatbázis Szolgáltató</string>
     <string name="settings_click_actions">Kattintási műveletek</string>
+    <string name="settings_colorize_weather_icons_summary">Ikon színek beállítása a szöveg színéhez (fehér időjárás ikonokon kívül)</string>
+    <string name="settings_colorize_weather_icons_title"Ikonok színezése</string>
     <string name="settings_miui_support_summary">A MIUI natív widgetekhez kapcsolja be</string>
     <string name="settings_miui_support_title">MIUI widgetek</string>
     <string name="settings_miui_v5_summary">MIUI v5 ROM-hoz kapcsolja be</string>
@@ -187,6 +200,11 @@
     <string name="settings_widgets_click_date_title">Dátum érintésekor</string>
     <string name="settings_widgets_click_weather_summary">Alkalmazás indítása az időjárás érintésekor (hőmérséklet)</string>
     <string name="settings_widgets_click_weather_title">Időjárás érintésekor</string>
+    <string name="settings_widgets_clock_remove_leading_zero_summary">Az első 0 eltávolítása az órából.</string>
+    <string name="settings_widgets_clock_remove_leading_zero_title">Egyszámjegyű óra</string>
+    <string name="settings_widgets_local_time_summary">Város helyi idejének használata</string>
+    <string name="settings_widgets_local_time_title">Helyi idő</string>
+    <string name="settings_widgets_widget4x1">Widget 4x1</string>
     <string name="settings_widgets_widget4x1_data_title">Időjárás adatok</string>
     <string name="settings_widgets_widget4x1_transparent_sum">Alapértelmezett háttérhez ne jelölje ki</string>
     <string name="settings_widgets_widget4x1_transparent_title">Átlátszó háttér</string>
@@ -206,14 +224,15 @@
     <string name="settings_widgets_widget4x2_temp_font_title">Hőmérséklet</string>
     <string name="settings_widgets_widget4x2_wind_font_summary">Alapértelmezett érték 14sp</string>
     <string name="settings_widgets_widget4x2_wind_font_title">Szélsebesség</string>
+    <string name="settings_widgets_widget4x3_hourly_view">Óránkénti időjárás</string>
+    <string name="share">Megosztás</string>
     <string name="share_content">\#WeatherBZ#</string>
     <string name="share_weather_content">"\#WeatherBZ# Ma %1$s időjárása : %2$s, %3$s, %4$s. Frissítve %5$s."</string>
     <string name="share_weather_title">Időjárás adatok megosztása</string>
-    <string name="share">Megosztás</string>
     <string name="start_time_title">Kezdete</string>
+    <string name="temperature_units">Hőmérséklet mértékegysége</string>
     <string name="temperature_units_c">Celsius</string>
     <string name="temperature_units_f">Fahrenheit</string>     
-    <string name="temperature_units">Hőmérséklet mértékegysége</string>
     <string name="text_color_title">Szöveg szín</string>
     <string name="theme_author">"Szerző: "</string>
     <string name="theme_date">"Dátum: "</string>
@@ -226,9 +245,9 @@
     <string name="themes_weather_icons">Időjárás ikon</string>
     <string name="updating">Frissítés...</string>
     <string name="upgrade">Frissítés</string>
+    <string name="visibility_units">Látótávolság mértékegysége</string>
     <string name="visibility_units_m">" m"</string>
     <string name="visibility_units_mi">" mérföld"</string>
-    <string name="visibility_units">Látótávolság mértékegysége</string>
     <string name="weather_feel">"Hőérzet: "</string>
     <string name="weather_humidity">"Páratartalom: "</string>
     <string name="weather_no_city">Nincs ilyen város</string>
@@ -238,11 +257,11 @@
     <string name="weather_sunset">"Napnyugta: "</string>
     <string name="weather_visibility">"Látótávolság: "</string>
     <string name="weather_wind">"Szél: "</string>
-    <string name="widget_name_4x2_v5">Időjárás Miui V5 (4x2)</string>
-    <string name="widget_name_4x2">Időjárás 4x2</string>
+    <string name="widget_name_4x1">Időjárás 4x1</string>
     <string name="widget_name_4x1_ext">Időjárás 4x1</string>
     <string name="widget_name_4x1_v5">Időjárás Miui V5 (4x1)</string>
-    <string name="widget_name_4x1">Időjárás 4x1</string>
+    <string name="widget_name_4x2">Időjárás 4x2</string>
+    <string name="widget_name_4x2_v5">Időjárás Miui V5 (4x2)</string>
     <string name="widget_text_color_summary">Widgetek szöveg színe</string>
     <string name="wind_e">K</string>
     <string name="wind_ene">K-ÉK</string>
@@ -254,10 +273,10 @@
     <string name="wind_nw">ÉNY</string>
     <string name="wind_s">D</string>
     <string name="wind_se">DK</string>
+    <string name="wind_speed_units">Szélsebesség mértékegysége</string>   
     <string name="wind_speed_units_kmph">" km/h"</string>
     <string name="wind_speed_units_mph">" mph"</string>
     <string name="wind_speed_units_mps">" m/s"</string>
-    <string name="wind_speed_units">Szélsebesség mértékegysége</string>   
     <string name="wind_sse">D-DK</string>
     <string name="wind_ssw">D-DNY</string>
     <string name="wind_sw">DNY</string>
@@ -277,4 +296,5 @@
     <string name="zodiac_scorpio">Skorpió</string>
     <string name="zodiac_taurus">Bika</string>
     <string name="zodiac_virgo">Szűz</string>
+
 </resources>
